Mailing List - Separation of generate and display Bug fixes for mailing list and back issue list - no of columns reduction, over lapping buttons, start month handing, indexing for performance Back issue list - Separation of generate and display Bug fixes for mailing list and back issue list - no of columns reduction, over lapping buttons, date range handling

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -727,6 +727,25 @@ statement = select journals.journalCode, journals.journalName, subscriber_type.s
 rep_sub_rate = select journalGroupName, subTypeDesc, `year`, year1, year2, year3, year5 from temp_sub_rate
 !End Cisrculation Figures ---------------------------------------------
 
+! List ML
+listml = select t1.id, t1.journalCode, t1.subtypecode, t1.subscriberNumber, t1.subscriberName, concat(t1.department , t1.institution, \
+                t1.address) as address, t1.city, t1.district, t1.state, t1.country, t1.pincode, t1.copies, t1.issue, t1.month, t1.`year`, \
+                concat(t1.startYear, "-", t1.startMonth) as start, concat(t1.endMonth, "-", t1.endYear) as end \
+                FROM mailing_list_detail as t1, journals \
+                where t1.journalId = journals.id and \
+                journals.journalName = ? and t1.issue = ? AND  t1.`year` = ?
+! End List ML
+
+! List BIL
+listbil = select t1.journalCode, t1.subtypecode, t1.subscriberNumber, t1.subscriberName, t1.department , t1.institution, \
+                t1.address, t1.city, t1.district, t1.state, t1.country, t1.pincode, t1.copies, t1.issue, t1.month, t1.`year`, \
+                t1.startYear, t1.startMonth, t1.endYear, t1.endMonth \
+                FROM mailing_list_detail as t1 left join subscriber_type on t1.subtypecode = subscriber_type.subtypecode \
+                left join journals on t1.journalId = journals.id \
+                where t1.bilid <> "" and \
+                journals.journalName = ? and t1.issue = ? AND  t1.`year` = ?
+! End List BIL
+
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
@@ -824,7 +843,9 @@ select_generateml =   Select \
                     left join districts on subscriber.district = districts.id \
                     left join states on subscriber.state = states.id \
                     where subscriptiondetails.active = '1' \
-                    and journals.journalName = ? and subscriptiondetails.endYear >= ? and subscriptiondetails.startYear <= ?
+                    and journals.journalName = ? \
+                    and datediff(date_format(concat(subscriptiondetails.endYear,'-',subscriptiondetails.endMonth,'-30'),'%Y/%m/%d'), date_format(concat(?,'-',(select id from months where month = ?),'-30'),'%Y/%m/%d'))>= 0 \
+                    and datediff(date_format(concat(subscriptiondetails.startYear,'-',subscriptiondetails.startMonth,'-1'),'%Y/%m/%d'), date_format(concat(?,'-',(select id from months where month = ?),'-30'),'%Y/%m/%d'))<= 0 
 
 insert_ml = insert into mailing_list (journalId, issue, `year`, month) values \
             ((select id from journals where journals.journalName = ?),?,?,(select id from months where months.month = ?))
@@ -843,7 +864,7 @@ get_ml =select id, journalId, issue, `year`, month, mlDate FROM mailing_list whe
 
 check_ml =select id FROM mailing_list where \
                 journalId =  (select id from journals where journals.journalName = ?) \
-                and issue = ?
+                and issue = ? and `year` = ?
 
 search_mldtl = select id, journalCode, subtypecode, subscriberNumber, subscriberName, department , institution, \
                 address, city, district, state, country, pincode, copies, issue, month, `year`, startYear, startMonth, endYear, endMonth \
@@ -851,6 +872,9 @@ search_mldtl = select id, journalCode, subtypecode, subscriberNumber, subscriber
 
 get_ml_id = select id from mailing_list where journalId = (select id from journals where journals.journalName = ?) and \
              issue = ? and `year` = ? and month = (select id from months where months.month = ?)
+
+search_mldtl_ui = select journalCode, subtypecode, subscriberNumber, subscriberName, city, state, country, pincode, copies, issue, month, `year` \
+                FROM mailing_list_detail where mailinglistid = ?
 #--------------------------------------------------------------------------
 # End Mailing List
 #--------------------------------------------------------------------------
@@ -858,7 +882,7 @@ get_ml_id = select id from mailing_list where journalId = (select id from journa
 #--------------------------------------------------------------------------
 # Start Back Issue List
 #--------------------------------------------------------------------------
-subscribernumber =  select subscriber.subscriberNumber \
+subscribernumber =  select distinct subscriber.subscriberNumber \
                     from  subscriber,\
                         back_issue_list,\
                         subscription,\
@@ -869,7 +893,7 @@ subscribernumber =  select subscriber.subscriberNumber \
                         and subscription.subscriberID = subscriber.id \
                     group by subscriber.subscriberNumber
 
-subscribernumberbil =   select subscriber.subscriberNumber \
+subscribernumberbil =   select distinct subscriber.subscriberNumber \
                         from  subscriber,\
                             back_issue_list, \
                             subscription, \
@@ -926,8 +950,7 @@ generate_bil = select   mailing_list.id, \
                         and back_issue_list.subscription_detail_id = subscriptiondetails.id \
                         and back_issue_list.journal_id = journals.id \
                         and mailing_list.journalId = journals.id \
-                        and subscriptiondetails.active = true \
-                        and subscriber.subscriberNumber = ?
+                        and subscriptiondetails.active = true
 
 insert_mldtl_bil = insert into mailing_list_detail \
                     ( mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, journalCode, \
@@ -940,19 +963,27 @@ insert_mldtl_bil = insert into mailing_list_detail \
 
 update_bil = update back_issue_list SET sent_to_subscriber = true WHERE Id = ?
 
-search_bil = select \
+search_bil = select mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
+                mailing_list_detail.subscriberName, mailing_list_detail.city, mailing_list_detail.state, \
+                mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.issue, \
+                mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate \
+                from mailing_list_detail left join subscriptiondetails on mailing_list_detail.subscriptionDetailId = subscriptiondetails.id \
+                where \
+                mailing_list_detail.bilid <> '' and subscriptiondetails.active = '1' \
+                and mailing_list_detail.subscriberNumber = ?
+
+search_bil_ui = select \
             mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
-            mailing_list_detail.subscriberName, mailing_list_detail.department, \
-            mailing_list_detail.institution, mailing_list_detail.address, mailing_list_detail.city, mailing_list_detail.district, \
+            mailing_list_detail.subscriberName, \
+            mailing_list_detail.city, \
             mailing_list_detail.state, mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, \
-            mailing_list_detail.startYear, mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.issue, \
-            mailing_list_detail.endMonth, mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate \
+            mailing_list_detail.issue, \
+            mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate \
             FROM \
             mailing_list_detail, subscriptiondetails \
             where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
-            and  mailing_list_detail.startYear >= subscriptiondetails.startYear and subscriberNumber = ? \
-            and bilid <> ' ' group by bildate
-
+            and  mailing_list_detail.startYear >= subscriptiondetails.startYear and mailing_list_detail.subscriberNumber = ? \
+            and mailing_list_detail.bilid <> ' '
 #--------------------------------------------------------------------------
 # End Back Issue List
 #--------------------------------------------------------------------------
