Print Order form modified. Added print order report to side bar. Print Order report incomplete. Annual subscription rate - col name change. Fixed bug in addSubType which was causing js crash.

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -215,24 +215,31 @@ t1.janPrintOrder, t1.febPrintOrder, t1.marPrintOrder, t1.aprPrintOrder, t1.mayPr
 t1.julyPrintOrder, t1.augPrintOrder, t1.septPrintOrder, t1.octPrintOrder, t1.novPrintOrder, t1.decPrintOrder , t1.annualPrintOrder \
 from journals t2 left join print_order t1 on t2.id = t1.journalId and t1.`year`=?
 
+getNoOfIssues = select issues from journals where journalName = ?
+
 !update_printOrder = update print_order set printOrder = ? where year = ? and journalId = (select id from journals where journalCode = ?)
 
-update_printOrder = update print_order set janPrintOrder = ?, febPrintOrder = ?, marPrintOrder = ?, aprPrintOrder = ?, \
-                    mayPrintOrder = ?, junePrintOrder = ?, julyPrintOrder = ?, augPrintOrder = ?, septPrintOrder = ?, \
-                    octPrintOrder = ?, novPrintOrder = ?, decPrintOrder = ?, annualPrintOrder = ? where id = ?
+!update_printOrder = update print_order set janPrintOrder = ?, febPrintOrder = ?, marPrintOrder = ?, aprPrintOrder = ?, \
+!                    mayPrintOrder = ?, junePrintOrder = ?, julyPrintOrder = ?, augPrintOrder = ?, septPrintOrder = ?, \
+!                    octPrintOrder = ?, novPrintOrder = ?, decPrintOrder = ?, annualPrintOrder = ? where id = ?
+
+update_printOrder = update print_order set printOrder = ? where id = ?
 
 add_new_print_order = select id, journalCode, journalName, issues from journals
 
-get_printOrder = select printOrder from print_order where year = ? and journalId = ? and monthID = ?
+!get_printOrder = select printOrder from print_order where `year` = ? and journalId = ? and issueNo = ?
+get_printOrder = select printOrder from print_order where `year` = ? and journalId = (select id from journals where journalName = ?) and issueNo = ?
 
-insert_printOrder = insert into print_order (year, journalID, \
-                    janPrintOrder, febPrintOrder, marPrintOrder, aprPrintOrder, mayPrintOrder, junePrintOrder, \
-                    julyPrintOrder, augPrintOrder, septPrintOrder, octPrintOrder, novPrintOrder, decPrintOrder, annualPrintOrder) \
-                    values(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+!insert_printOrder = insert into print_order (year, journalID, \
+!                    janPrintOrder, febPrintOrder, marPrintOrder, aprPrintOrder, mayPrintOrder, junePrintOrder, \
+!                    julyPrintOrder, augPrintOrder, septPrintOrder, octPrintOrder, novPrintOrder, decPrintOrder, annualPrintOrder) \
+!                    values(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+insert_printOrder = insert into print_order (`year`, journalId, issueNo, printOrder ) values (?,(select id from journals where journalName = ?),?,?)
 
 get_journal_id = select id from journals where journalCode = ?
 
-get_print_order_id = select id from print_order where year = ? and journalId = (select id from journals where journalCode = ?)
+!get_print_order_id = select id from print_order where year = ? and journalId = (select id from journals where journalCode = ?)
+get_print_order_id = select id from print_order where year = ? and journalId = (select id from journals where journalName = ?) and issueNo = ?
 !End Print Order --------------------------------------------------------
 
 !Journal Group -----------------------------------------------------
