--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -3,11 +3,12 @@
 
 log4j.rootLogger=ERROR, stdout, migration
 
-log4j.logger.JDSMigration.Inward=ERROR
-log4j.logger.JDSMigration.Subscriber=ERROR
-log4j.logger.JDSMigration.Subscription=ERROR
-log4j.logger.JDSMigration.Corr=ERROR
-log4j.logger.JDSMigration.CurrMem=DEBUG
+#log4j.logger.JDSMigration.Inward=DEBUG
+#log4j.logger.JDSMigration.Subscriber=DEBUG
+log4j.logger.JDSMigration.Subscription=DEBUG
+#log4j.logger.JDSMigration.Corr=DEBUG
+#log4j.logger.JDSMigration.CurrMem=DEBUG
+#log4j.logger.JDSMigration.CurtWas=DEBUG
 #log4j.logger.JDSMigration.MigrationBase=DEBUG
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
