--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -502,7 +502,8 @@ get_subscription_for_subscriber =   select  t8.id, \
                                             t8.subscriptionDate,(t8.amount + sum(COALESCE(t10.amount,0))) as amount, \
                                             t8.subscriptionTotal, \
                                             (t8.balance - sum(COALESCE(t10.amount,0))) as balance, \
-                                            t8.currency \
+                                            t8.currency, \
+                                            t8.legacy \
                                             from \
                                             ( \
                                                 select  t5.id \
@@ -512,6 +513,7 @@ get_subscription_for_subscriber =   select  t8.id, \
                                                 , sum(copies * t7.rate) as subscriptionTotal \
                                                 , (sum(copies * t7.rate) - t5.amount) as balance \
                                                 , t5.currency \
+                                                , t5.legacy \
                                                 from  ( \
                                                     select t4.subscriberName \
                                                             , t1.id \
@@ -519,6 +521,7 @@ get_subscription_for_subscriber =   select  t8.id, \
                                                             , t2.amount \
                                                             , t3.currency \
                                                             , t1.subscriptionDate \
+                                                            , t1.legacy \
                                                     from subscription t1 left join inward t2 on t1.inwardID = t2.id \
                                                     left join currency t3 on t2.currency = t3.id \
                                                     left join subscriber t4 on t1.subscriberID = t4.id \
