--- a/trunk/web/WEB-INF/web.xml
+++ b/trunk/web/WEB-INF/web.xml
@@ -192,6 +192,10 @@
             <role-name>user</role-name>
         </run-as>
     </servlet>
+    <servlet>
+        <servlet-name>fileupload</servlet-name>
+        <servlet-class>IAS.Controller.fileupload.fileupload</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>main</servlet-name>
         <url-pattern>/main</url-pattern>
@@ -337,6 +341,10 @@
         <servlet-name>Email</servlet-name>
         <url-pattern>/Email/*</url-pattern>
         <url-pattern>/email/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>fileupload</servlet-name>
+        <url-pattern>/fileupload</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
