--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,8 @@ file.reference.commons-beanutils-1.8.3.jar=lib\\commons-beanutils-1.8.3.jar
 file.reference.commons-beanutils-bean-collections-1.8.3.jar=lib\\commons-beanutils-bean-collections-1.8.3.jar
 file.reference.commons-beanutils-core-1.8.3.jar=lib\\commons-beanutils-core-1.8.3.jar
 file.reference.commons-dbutils-1.4.jar=lib\\commons-dbutils-1.4.jar
+file.reference.commons-fileupload-1.2.2.jar=lib\\commons-fileupload-1.2.2.jar
+file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
 file.reference.itext-xtra-5.2.1-javadoc.jar=lib/itext-5.2.1/itext-xtra-5.2.1-javadoc.jar
 file.reference.itext-xtra-5.2.1-sources.jar=lib/itext-5.2.1/itext-xtra-5.2.1-sources.jar
@@ -47,6 +49,7 @@ file.reference.itextpdf-5.2.1-sources.jar=lib/itext-5.2.1/itextpdf-5.2.1-sources
 file.reference.itextpdf-5.2.1.jar=lib/itext-5.2.1/itextpdf-5.2.1.jar
 file.reference.jstl-api-1.2.jar=lib\\jstl-api-1.2.jar
 file.reference.jstl-impl-1.2.jar=lib\\jstl-impl-1.2.jar
+file.reference.jxl.jar=lib\\jxl.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
 file.reference.mail.jar=lib/javamail-1.4.4/mail.jar
@@ -82,7 +85,10 @@ javac.classpath=\
     ${file.reference.itext-xtra-5.2.1.jar}:\
     ${file.reference.itextpdf-5.2.1-javadoc.jar}:\
     ${file.reference.itextpdf-5.2.1-sources.jar}:\
-    ${file.reference.simple-java-mail-2.0.jar}
+    ${file.reference.simple-java-mail-2.0.jar}:\
+    ${file.reference.commons-fileupload-1.2.2.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.jxl.jar}
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
