connection pooling URN functionality completed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -371,6 +371,8 @@ update_inward = update inward set \
 
 update_payment_info = update payment set subscriptionID=? where inwardID=(select id from inward where inwardNumber=?)
 
+update_urn_info = update inward set chqDDNumber=?,amount=?, paymentDate=? where inwardNumber=?
+
 # The where/and clause is formed dynamically in the searchInward in IAS.Model.inward.java
 search_inwards = select t1.id as inwardID, inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
                 t1.inwardPurpose as inwardPurposeID from inward t1 \
