--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -419,4 +419,14 @@
         <description/>
         <role-name>admin</role-name>
     </security-role>
+    <resource-ref>
+        <description>Resource reference to a factory for java.sql.Connection
+    instances that may be used for talking to a particular
+    database that is configured in the &lt;Context&gt;
+    configurartion for the web application</description>
+        <res-ref-name>jdbc/jds</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+        <res-sharing-scope>Shareable</res-sharing-scope>
+    </resource-ref>
 </web-app>
