--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -758,6 +758,14 @@ listbil = select t1.journalCode, t1.subtypecode, t1.subscriberNumber, t1.subscri
                 journals.journalName = ? and t1.issue = ? AND  t1.`year` = ?
 ! End List BIL
 
+get_max_no_of_issues = select max(issues) FROM journals
+
+get_list_of_journals = select journalCode FROM journals;
+
+get_no_of_issues = select issues from journals where journalCode = ?
+
+get_print_order = select printOrder from print_order where `year`=? and journalId=(select id from journals where journals.journalCode=?) and issueNo=?
+
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
@@ -857,7 +865,7 @@ select_generateml =   Select \
                     where subscriptiondetails.active = '1' \
                     and journals.journalName = ? \
                     and datediff(date_format(concat(subscriptiondetails.endYear,'-',subscriptiondetails.endMonth,'-30'),'%Y/%m/%d'), date_format(concat(?,'-',(select id from months where month = ?),'-30'),'%Y/%m/%d'))>= 0 \
-                    and datediff(date_format(concat(subscriptiondetails.startYear,'-',subscriptiondetails.startMonth,'-1'),'%Y/%m/%d'), date_format(concat(?,'-',(select id from months where month = ?),'-30'),'%Y/%m/%d'))<= 0 
+                    and datediff(date_format(concat(subscriptiondetails.startYear,'-',subscriptiondetails.startMonth,'-1'),'%Y/%m/%d'), date_format(concat(?,'-',(select id from months where month = ?),'-30'),'%Y/%m/%d'))<= 0
 
 insert_ml = insert into mailing_list (journalId, issue, `year`, month) values \
             ((select id from journals where journals.journalName = ?),?,?,(select id from months where months.month = ?))
