--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger=ERROR, stdout, migration
 
 #log4j.logger.JDSMigration.Inward=DEBUG
 #log4j.logger.JDSMigration.Subscriber=DEBUG
-log4j.logger.JDSMigration.Subscription=DEBUG
+#log4j.logger.JDSMigration.Subscription=DEBUG
 #log4j.logger.JDSMigration.Corr=DEBUG
 #log4j.logger.JDSMigration.CurrMem=DEBUG
 #log4j.logger.JDSMigration.CurtWas=DEBUG
