--- a/JDSMigration/nbproject/project.properties
+++ b/JDSMigration/nbproject/project.properties
@@ -31,7 +31,9 @@ file.reference.jxl.jar=lib\\jxl.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
     ${file.reference.log4j-1.2.16.jar}:\
@@ -59,6 +61,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=JDSMigration.JDSMigrate
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -70,7 +81,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-Xmx1024M
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
