--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -724,14 +724,15 @@ list_circulation_figures = select journalCode, journalName, instIndia, instAbroa
 
 !statement ---------------------------------------------
 
-statement = select journals.journalCode, journals.journalName, subscriber_type.subtypecode, sum(subscriptiondetails.copies) as copies, count(subscriber.id) as subscriberCount \
-            from subscriptiondetails left join subscription on subscriptiondetails.subscriptionID = subscription.id \
-            left join subscriber on subscription.subscriberID = subscriber.id \
-            left join subscriber_type on subscriber.subtype = subscriber_type.id \
-            left join journal_groups on subscriptiondetails.journalGroupID = journal_groups.id \
-            right join journal_group_contents on journal_group_contents.journalGroupId = journal_groups.id \
-            left join journals on journal_group_contents.journalId = journals.id \
-            where
+journal_id = select id from journals where journalName = ?
+
+subscriber_type = select subtypecode from subscriber_type
+
+statement = select subtypecode, count(subscriberId), sum(copies) \
+            FROM mailing_list_detail \
+            where journalId = ? and issue = ? and `year` = ? and subtypecode = ? \
+            group by subtypecode
+
 !End statement ---------------------------------------------
 
 !Circulation Figures ---------------------------------------------
@@ -981,7 +982,7 @@ insert_mldtl_bil = insert into mailing_list_detail \
                     ( ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
                     ?, ?, ?, ? )
 
-update_bil = update back_issue_list SET sent_to_subscriber = true WHERE Id = ?
+update_bil = update back_issue_list SET sent_to_subscriber = true WHERE Id = ? and sent_on = curdate()
 
 search_bil = select mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
                 mailing_list_detail.subscriberName, mailing_list_detail.city, mailing_list_detail.state, \
@@ -1002,7 +1003,7 @@ search_bil_ui = select \
             FROM \
             mailing_list_detail, subscriptiondetails \
             where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
-            and  mailing_list_detail.startYear >= subscriptiondetails.startYear and mailing_list_detail.subscriberNumber = ? \
+            and  mailing_list_detail.startYear >= subscriptiondetails.startYear \
             and mailing_list_detail.bilid <> ' '
 #--------------------------------------------------------------------------
 # End Back Issue List
