--- a/web/WEB-INF/classes/jds_mailinglist.properties
+++ b/web/WEB-INF/classes/jds_mailinglist.properties
@@ -7,8 +7,7 @@ leading     = 10.0
 textAlignment   = 0
 fontFamily      = Courier
 fontSize        = 10
-fontStyle       = BOLD
-
+fontStyle       = NORMAL
 ########Information for Sticker########
 stickerColumns  = 2
 stickerRows     = 8
