Fixes issue 140 Makes the pincode, city and state as BOLD in mailing list. All emails are now BCC'ed to jds.ias.mails@gmail.com

--- a/trunk/web/WEB-INF/classes/jds_mailinglist.properties
+++ b/trunk/web/WEB-INF/classes/jds_mailinglist.properties
@@ -7,8 +7,7 @@ leading     = 10.0
 textAlignment   = 0
 fontFamily      = Courier
 fontSize        = 10
-fontStyle       = BOLD
-
+fontStyle       = NORMAL
 ########Information for Sticker########
 stickerColumns  = 2
 stickerRows     = 8
