--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -759,6 +759,21 @@ listbil = select t1.journalCode, t1.subtypecode, t1.subscriberNumber, t1.subscri
                 journals.journalName = ? and t1.issue = ? AND  t1.`year` = ?
 ! End List BIL
 
+! Subscription Figures
+subscription_Figures = select count(subscriber.subscriberNumber), sum(subscriptiondetails.copies) \
+                        from \
+                        subscriptiondetails left join subscription on subscriptiondetails.subscriptionID = subscription.id \
+                        left join subscriber on subscription.subscriberID = subscriber.id \
+                        left join subscriber_type on subscriber.subtype = subscriber_type.id \
+                        left join journal_groups on subscriptiondetails.journalGroupID = journal_groups.id \
+                        right join journal_group_contents on journal_group_contents.journalGroupId = journal_groups.id \
+                        left join journals on journal_group_contents.journalId = journals.id \
+                        where subscriptiondetails.active = '1' and journals.journalCode = ? and subscriber_type.subtypecode = ? \
+                        and datediff(date_format(concat(subscriptiondetails.endYear,'-',subscriptiondetails.endMonth,'-30'),'%Y/%m/%d'), date_format(curdate(),'%Y/%m/%d'))>= 0 \
+                        and datediff(date_format(concat(subscriptiondetails.startYear,'-',subscriptiondetails.startMonth,'-1'),'%Y/%m/%d'), date_format(curdate(),'%Y/%m/%d'))<= 0 \
+                        group by journals.journalCode and subscriber_type.subtypecode
+
+! End Subscription figures
 get_max_no_of_issues = select max(issues) FROM journals
 
 get_list_of_journals = select journalCode FROM journals;
