Added all master data sql files to project. The master data is first loaded before start of migration. The transaction data is trucated before start of migration. Made some minor changes to the log output. Subs type for EBALL was incorrect.

--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -1,28 +1,41 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=INFO, stdout, migration
+log4j.rootLogger=DEBUG, stdout, migration
 
-#log4j.logger.JDSMigration.Inward=DEBUG
-#log4j.logger.JDSMigration.Subscriber=DEBUG
-#log4j.logger.JDSMigration.Subscription=DEBUG
-#log4j.logger.JDSMigration.Corr=DEBUG
-#log4j.logger.JDSMigration.CurrMem=DEBUG
-#log4j.logger.JDSMigration.CurtWas=DEBUG
-#log4j.logger.JDSMigration.MigrationBase=DEBUG
+log4j.logger.JDSMigration.OldInward=FATAL
+log4j.logger.JDSMigration.Inward=FATAL
+log4j.logger.JDSMigration.Temp=FATAL
+log4j.logger.JDSMigration.IndTemp=FATAL
+log4j.logger.JDSMigration.Subscriber=FATAL
+log4j.logger.JDSMigration.Subscription=FATAL
+log4j.logger.JDSMigration.Corr=FATAL
+log4j.logger.JDSMigration.CurrMem=FATAL
+log4j.logger.JDSMigration.CurtWas=FATAL
+log4j.logger.JDSMigration.MigrationBase=FATAL
+log4j.logger.JDSMigration.circulationFigures=FATAL
+log4j.logger.JDSMigration.migrateAssociates=FATAL
+log4j.logger.JDSMigration.migrateCURR=FATAL
+log4j.logger.JDSMigration.migrateEBALL=FATAL
+log4j.logger.JDSMigration.migrateExchange=FATAL
+log4j.logger.JDSMigration.migrateCURR=FATAL
+log4j.logger.JDSMigration.migrateFellows=FATAL
+log4j.logger.JDSMigration.migrateHONFEL=FATAL
+log4j.logger.JDSMigration.migrateJGRANT=FATAL
+log4j.logger.JDSMigration.migrateRES=FATAL
+log4j.logger.JDSMigration.circulationFigures=FATAL
 
+# Appender "stdout" settings
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern= %d %5p [%t] (%F:%L) - %m%n
 
-# Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
-
+# Appender "migration" settings
 log4j.appender.migration=org.apache.log4j.RollingFileAppender
+log4j.appender.migration.layout=org.apache.log4j.PatternLayout
+log4j.appender.migration.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
 log4j.appender.migration.File=logs\\${log4j.logger}\\migration.log
 
 log4j.appender.migration.MaxFileSize=500KB
 # Keep one backup file
-log4j.appender.migration.MaxBackupIndex=1
-
-log4j.appender.migration.layout=org.apache.log4j.PatternLayout
-log4j.appender.migration.layout.ConversionPattern=%p %t %c - %m%n
+log4j.appender.migration.MaxBackupIndex=2
