--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -737,9 +737,66 @@ statement = select subtypecode, count(subscriberId), sum(copies) \
 
 !Circulation Figures ---------------------------------------------
 
-rep_sub_rate = select journalGroupName, subTypeDesc, `year`, year1, year2, year3, year5 from temp_sub_rate
+cf_journals = SELECT id, journalCode from journals
+
+cf_issue = select issue from mailing_list where `year` = ?  and journalId = ? and month = (select months.Id from months where months.month = ?)
+
+cf_print_order = select printOrder from print_order where `year` = ? and journalId = ? and issueNo = ?
+
+cf_inst_i = select sum(mailing_list_detail.copies) as inst_i \
+                from mailing_list_detail left join subscriber_type on mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+                where subscriber_type.nationality = 'I' AND subscriber_type.institutional = 'I' \
+                and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
+                and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+                group by \
+                mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality
+
+cf_inst_f = select sum(mailing_list_detail.copies) as inst_f \
+            from mailing_list_detail left join subscriber_type on mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+            where subscriber_type.nationality = 'F' AND subscriber_type.institutional = 'I' \
+            and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
+            and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            group by \
+            mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality 
+
+cf_ind_i =  select sum(mailing_list_detail.copies) as ind_i \
+            from mailing_list_detail left join subscriber_type on mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+            where subscriber_type.nationality = 'I' AND subscriber_type.institutional = 'P' \
+            and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
+            and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            group by \
+            mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality
+
+cf_ind_f = select sum(mailing_list_detail.copies) as ind_f \
+            from mailing_list_detail left join subscriber_type on mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+            where subscriber_type.nationality = 'F' AND subscriber_type.institutional = 'P' \
+            and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
+            and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            group by \
+            mailing_list_detail.journalId, mailing_list_detail.`year`, subscriber_type.institutional, subscriber_type.nationality, mailing_list_detail.issue
+
+cf_free = select sum(mailing_list_detail.copies) as comp \
+            from mailing_list_detail left join subscriber_type on mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+            where subscriber_type.subtype = 'FREE' and subscriber_type.subtypecode <> 'AUTH'\
+            and mailing_list_detail.`year` = ? \
+            and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            group by \
+            mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue
+
+cf_auth = select sum(mailing_list_detail.copies) as auth \
+            from mailing_list_detail left join subscriber_type on mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+            where subscriber_type.subtypecode = 'AUTH' \
+            and mailing_list_detail.`year` = ? \
+            and mailing_list_detail.journalId = ?  and mailing_list_detail.issue = ? \
+            group by \
+            mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue
+
 !End Cisrculation Figures ---------------------------------------------
 
+! Subscription Rates
+rep_sub_rate = select journalGroupName, subTypeDesc, `year`, year1, year2, year3, year5 from temp_sub_rate
+
+!End Subscription Rates
 ! List ML
 listml = select t1.id, t1.journalCode, t1.subtypecode, t1.subscriberNumber, t1.subscriberName, concat(t1.department , t1.institution, \
                 t1.address) as address, t1.city, t1.district, t1.state, t1.country, t1.pincode, t1.copies, t1.issue, t1.month, t1.`year`, \
@@ -851,9 +908,6 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
                                                 and t2.id=t5.subscriptionId \
                                                 and t6.id=t2.inwardID \
                                                 and t5.invoiceNumber = ?
-
-
-
 
 #--------------------------------------------------------------------------
 # Start Mailing List
