Circulation figure Report - bug fixes Mailing List - Fixes schema updated

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -852,6 +852,23 @@ get_no_of_issues = select issues from journals where journalCode = ?
 
 get_print_order = select printOrder from print_order where `year`=? and journalId=(select id from journals where journals.journalCode=?) and issueNo=?
 
+! List susbcriber
+list_susbsriber = select subscriber.subscriberNumber, subscriber.subscriberName, subscriber_type.subtypecode, \
+                     cities.city, states.state, countries.country \
+                    from \
+                    subscriber left join countries on subscriber.country = countries.id \
+                    left join states on subscriber.state = states.id \
+                    left join cities on subscriber.city = cities.id \
+                    left join subscriber_type on subscriber.subtype = subscriber_type.id \
+                    left join subscription on subscription.subscriberID = subscriber.id \
+                    left join subscriptiondetails on subscriptiondetails.subscriptionID = subscription.id \
+                    left join journal_groups on subscriptiondetails.journalGroupID = journal_groups.id \
+                    left join journal_group_contents on journal_group_contents.journalGroupId = journal_groups.id \
+                    left join journals on journal_group_contents.journalId = journals.id \
+                    where subscription.active = 1 
+
+! End List subscriber
+
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
