--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -14,15 +14,14 @@ log4j.logger.JDSMigration.CurrMem=FATAL
 log4j.logger.JDSMigration.CurtWas=FATAL
 log4j.logger.JDSMigration.MigrationBase=FATAL
 log4j.logger.JDSMigration.circulationFigures=FATAL
-log4j.logger.JDSMigration.migrateAssociates=FATAL
-log4j.logger.JDSMigration.migrateCURR=FATAL
-log4j.logger.JDSMigration.migrateEBALL=FATAL
-log4j.logger.JDSMigration.migrateExchange=FATAL
-log4j.logger.JDSMigration.migrateCURR=FATAL
-log4j.logger.JDSMigration.migrateFellows=FATAL
-log4j.logger.JDSMigration.migrateHONFEL=FATAL
-log4j.logger.JDSMigration.migrateJGRANT=FATAL
+log4j.logger.JDSMigration.migrateAssociates=WARN
+log4j.logger.JDSMigration.migrateEBALL=WARN
+log4j.logger.JDSMigration.migrateExchange=WARN
+log4j.logger.JDSMigration.migrateFellows=WARN
+log4j.logger.JDSMigration.migrateHONFEL=WARN
+log4j.logger.JDSMigration.migrateJGRANT=WARN
 log4j.logger.JDSMigration.migrateRES=FATAL
+log4j.logger.JDSMigration.migrateCURR=FATAL
 log4j.logger.JDSMigration.circulationFigures=FATAL
 
 # Appender "stdout" settings
