agent excel upload

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -555,36 +555,32 @@ get_subscription_for_subscriber =   select  t8.id, \
                                         order by t8.id desc
 
 
-get_subscription_info_by_id =   select t6.id,\
-                                    t6.subscriberName,\
-                                    t6.inwardNumber,\
-                                    sum(t6.amount + COALESCE(t8.amount,0)) as amount,\
-                                    sum(t6.subscriptionTotal) as subscriptionTotal,\
-                                    (sum(t6.subscriptionTotal) - sum(t6.amount + COALESCE(t8.amount,0))) as balance,\
-                                    t6.subscriberNumber \
-                                from \
-                                ( \
-                                select  t1.id,\
-                                        t3.subscriberName,\
-                                        t2.inwardNumber,\
-                                        ((t5.rate * t4.copies) - t2.amount) as balance,\
-                                        (t5.rate * t4.copies)  as subscriptionTotal,\
-                                        t2.amount,\
-                                        t3.subscriberNumber \
-                                from  subscription t1,\
-                                    inward t2,\
-                                    subscriber t3,\
-                                    subscriptiondetails t4,\
-                                    subscription_rates t5 \
-                                where t1.inwardID = t2.id \
-                                    and t1.subscriberID = t3.id \
-                                    and t4.subscriptionID = t1.id \
-                                    and t4.journalPriceGroupID = t5.id \
-                                    and t4.active=true \
-                                    and t1.id = ? \
-                                ) t6  left join payment t7 on t6.id = t7.subscriptionID \
-                                    left join inward t8 on t7.inwardID = t8.id \
-                                    group by t6.id, t6.subscriberName, t6.inwardNumber, t6.subscriberNumber
+get_subscription_info_by_id =   SELECT t6.ID,\
+                                        t6.INWARDNUMBER as inwardNumber,\
+                                        t6.AMOUNT as amount,\
+                                        COALESCE(t9.SUBSCRIPTIONTOTAL,0) as subscriptionTotal,\
+                                        (COALESCE(t9.SUBSCRIPTIONTOTAL,0) - t6.AMOUNT) AS balance \
+                                   FROM    (SELECT t1.ID,\
+                                                   t2.INWARDNUMBER,\
+                                                   sum((COALESCE(t2.AMOUNT, 0)) + COALESCE(t5.AMOUNT, 0)) AS amount \
+                                              FROM SUBSCRIPTION t1 \
+                                                   LEFT JOIN INWARD t2 \
+                                                      ON t1.INWARDID = t2.ID \
+                                                   LEFT JOIN (SELECT t3.SUBSCRIPTIONID,\
+                                                                     sum(t4.AMOUNT) AS amount \
+                                                                FROM PAYMENT t3, INWARD t4 \
+                                                               WHERE t3.INWARDID = t4.id \
+                                                              GROUP BY t3.SUBSCRIPTIONID) t5 \
+                                                      ON t5.SUBSCRIPTIONID = t1.ID \
+                                             WHERE t1.ID = ? \
+                                            GROUP BY t1.ID) t6 \
+                                        LEFT JOIN \
+                                           (SELECT t7.SUBSCRIPTIONID,\
+                                                   sum(t7.COPIES * t8.RATE) AS subscriptiontotal \
+                                              FROM SUBSCRIPTIONDETAILS t7, SUBSCRIPTION_RATES t8 \
+                                             WHERE t7.JOURNALPRICEGROUPID = t8.ID AND t7.ACTIVE = TRUE \
+                                            GROUP BY t7.SUBSCRIPTIONID) t9 \
+                                        ON t6.ID = t9.SUBSCRIPTIONID
 
 get_subscription_detail_by_subscription_id =    select t2.id \
                                 , t3.journalGroupName as journalGroupName \
@@ -657,6 +653,14 @@ update_subscription_balance = update subscription set subscriptionTotal=?, balan
 
 get_active_subscription_total_amount = select t1.subscriptionTotal,t2.amount from subscription t1, inward t2 where \
                                        t1.inwardID = t2.id and t1.id=?
+
+get_subscription_inward_amount =    SELECT t3.INWARDNUMBER as inwardNumber, sum(t3.AMOUNT + COALESCE(t5.amount, 0)) as amount \
+                                    FROM    (SELECT t2.INWARDNUMBER, t1.ID, t2.AMOUNT \
+                                               FROM subscription t1, inward t2 \
+                                              WHERE t1.INWARDID = t2.ID AND t1.id = ?) t3 \
+                                         LEFT JOIN \
+                                            (PAYMENT t4, INWARD t5) \
+                                         ON t3.id = t4.SUBSCRIPTIONID AND t4.inwardID = t5.id
 #--------------------------------------------------------------------------
 # Reports
 #--------------------------------------------------------------------------
